--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <footer class="unique-color-dark text-white mt-5 p-4 text-center">
        
         <div class="text-center mr-auto"> 
-                <a href="https:lk-devportal.herokuapp.com" class="text-white m-2" target="_blank"><i class="fas fa-globe"></i></a>
+                <a href="https://lk-devportal.herokuapp.com" class="text-white m-2" target="_blank"><i class="fas fa-globe"></i></a>
                 <a href="https://www.facebook.com/lakshyajit.laxmikant" class="text-white m-2" target="_blank"><i class="fab fa-facebook "></i></a>
                 <a href="https://github.com/lakshyajit165" class="text-white m-2" target="_blank"><i class="fab fa-github "></i></a>
                 <a href="https://www.linkedin.com/in/lakshyajit/" class="text-white m-2" target="_blank"><i class="fab fa-linkedin "></i></a>
