--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!--Navbar-->
     <div id="particles-js"></div>
     <nav class="navbar navbar-expand-lg navbar-dark unique-color-dark">
-            <a class="navbar-brand" href="#"><b>Map View</b></a>
+            <a class="navbar-brand" href="https://lakshyajit165.github.io/skylark_frontend/"><b>Map View</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
               aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -68,7 +68,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><b><i class="fas fa-home mr-2"></i>Home </b><span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="https://lakshyajit165.github.io/skylark_frontend/"><b><i class="fas fa-home mr-2"></i>Home </b><span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="modal" data-target="#basicExampleModal"><b><i class="fas fa-list mr-2"></i>Facts</b></a>
